# miniscript

./: AdvancedJIT.cpp  CLEANUP_SUMMARY.md  CMakeLists.txt  CONTEXT_POOLING_COMPLETE.md  JIT-Multi-Phase-Strategy.md  LargeCodeParsingProfiler.cpp  LazyLoadingBenchmark.cpp  MAP_OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_ROADMAP.md  OperationProfiler.cpp  PARSER_INTEGRATION_COMPLETE.md  ParsingProfiler.cpp  Phase2_1_Completion_Report.md  Phase2_2_Analysis_Results.md  Phase2_2_LazyLoading_Summary.md  Phase3.2-JIT-Plan.md  README_PERFORMANCE.md  REMAINING_OPTIMIZATIONS.md  SPECIALIZED_OPCODES_USAGE_ANALYSIS.md  SpecializedInstructions.cpp  TAC_Operation_Categories.md  TYPE_SPECIALIZED_INSTRUCTIONS_COMPLETE.md  VALIDATION_REPORT.md  WARP.md  accuracy-performance-test  advanced-ir-test  advanced-jit  analyze_type_inference_potential  analyze_type_inference_potential.cpp  benchmark.ms  debug_specialization.cpp  debug_specialization_simple  debug_specialization_simple.cpp  diagnostic_test.cpp  fastpath-validator  hash_simple_test.ms  install_manifest.txt  jit-projection-test  large-code-profiler  map_perf_analysis.ms  (+44 more)
MiniScript-cpp/: vttest.ms
MiniScript-cpp/lib/: vt.ms
MiniScript-cpp/src/: AdvancedIRGenerator.cpp  AdvancedIRGenerator.h  JITInterpreter.cpp  JITInterpreter.h  JITMachine.cpp  JITMachine.h  JITProjectionTest.cpp  Phase3_2D_Test.cpp  Phase3_3_Standalone.cpp  Phase3_3_Test.cpp  RuntimeJIT.cpp  RuntimeJIT.h  TermIO.cpp  TermIO.h  TermIntrinsics.cpp  TermIntrinsics.h  main.cpp
MiniScript-cpp/src/MiniScript/: Dictionary.h  MiniscriptParser.cpp  MiniscriptParser.h  MiniscriptTAC.cpp  MiniscriptTAC.h  MiniscriptTypes.cpp  MiniscriptTypes.h
lib/: fastFonts.ms
testing/: README.md
testing/jit-development/: ExpressionJIT.cpp  ExpressionProfiler.h  MiniScriptJIT.cpp  ProfilerTest.cpp  SimpleExpressionJIT.cpp  SimpleParsingProfiler.cpp  main_lazy.cpp  simple_pool_test.cpp
testing/miniscript-programs/: baseline_test.ms  basic_test.ms  env_lazy_test.ms  env_test.ms  hash_test.ms  hash_validation_test.ms  lazy_shell.ms  math_test.ms  microbench.ms  no_intrinsics.ms  path_test.ms  pure_math.ms  realworld_bench_simple.ms  shell_test.ms  simple_perf_test.ms  term_test.ms  test3.ms  test_program.ms  test_sum.ms
testing/performance-analysis/: JIT-Reality-Check.md  MiniScript-Optimization-Roadmap.md  Next-Steps-JIT-Compilation.md  PERFORMANCE_ANALYSIS.md  Phase2.3-Completion-Report.md  Phase2.3-Summary.md  Phase2_1_Final_Results.md  Specialized_Evaluators_Design.md  TACLine_Analysis.md
testing/validation/: AccuracyAndPerformanceTest.cpp  Phase3_2C_Test.cpp  Phase3_2D_Simple.cpp  Phase3_2D_Standalone.cpp
